--- a/texts/static/styles.css
+++ b/texts/static/styles.css
@@ -56,3 +56,11 @@ div.publisher-name a {
 	font-family: 'Abril Fatface', cursive;
 	font-size: 1.5rem;	
 }
+
+section.author-jumbotron {
+	padding: 0;
+}
+
+section.author-jumbotron .col-8 {
+	padding: 4rem;
+}
