--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-<header class="mayak-header">
+<header class="sova-header">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-between">
             <div class="navbar-brand col-6">
