--- a/texts/static/styles.css
+++ b/texts/static/styles.css
@@ -4,7 +4,7 @@ ul.jumbotron-list {
 	list-style: none;
 }
 
-p {
+h1, h2, h3, p {
 	font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -52,6 +52,11 @@ span.author-name a {
 	font-size: 1.5rem;
 }
 
+span.theme-name a {
+	font-family: 'Abril Fatface', cursive;
+	font-size: 1.5rem;
+}
+
 div.publisher-name a {
 	font-family: 'Abril Fatface', cursive;
 	font-size: 1.5rem;	
@@ -63,4 +68,39 @@ section.author-jumbotron {
 
 section.author-jumbotron .col-8 {
 	padding: 4rem;
+}
+
+header.sova-header {
+	border-bottom: 1px solid rgba(180,180,180,0.35);
+}
+
+div.latest {
+	border-right: 1px solid rgba(180,180,180,0.35);
+	padding-right: 0;
+}
+
+div.latest h2 {
+	padding: 1rem 2rem;
+}
+
+div.featured {
+	border-right: 1px solid rgba(180,180,180,0.35);
+}
+
+div.featured h2 {
+	padding: 1rem 2rem;
+}
+
+div.featured h1.featured-title {
+	font-family: 'Abril Fatface', cursive;
+	font-size: 3rem;
+}
+
+div.featured-text-image {
+	height: 25vh;
+	background-size: cover;
+}
+
+div.topics h2 {
+	padding: 1rem 2rem;	
 }
