--- a/texts/templates/texts/theme_detail.html
+++ b/texts/templates/texts/theme_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
     <section class="jumbotron">
         <div class="row text-center">
-            <h1 class="col-4">{{ object.theme_name }}</h1>
+            <h1 class="col-4">{{ object.name }}</h1>
             <div class="col-8">
                 <p>wassup</p>
             </div>
@@ -13,13 +13,10 @@
         <div class="album py-5 bg-light">
             <div class="container">
                 <div class="row">
-<!--                     <div class="col">
-                        {% for text in object.owner_texts.all %}
-                        <p><a href="{{ text.get_absolute_url }}">{{ text.text_title }}</a></p>
-                        {% endfor %}
-                    </div> -->
                     <div class="col">
-                        <p></p>
+                        {% for text in object.themes.all %}
+                        <p><a href="{{ text.get_absolute_url }}">{{ text.title }}</a></p>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
