--- a/texts/static/styles.css
+++ b/texts/static/styles.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Source+Sans+Pro:400,700}|Cormorant+Garamond');
 
+.serif {
+	font-family: 'Abril Fatface', cursive;
+}
+
+.serif1 {
+	font-family: 'Cormorant Garamond', serif;
+}
+
 ul.jumbotron-list {
 	list-style: none;
 }
@@ -121,4 +129,8 @@ div.topics h2 {
 
 div.topics h4.topic-name {
 	font-family: 'Abril Fatface', cursive;
+}
+
+div.topics h4.country-name {
+	font-family: 'Abril Fatface', cursive;	
 }
