--- a/texts/templates/home.html
+++ b/texts/templates/home.html
@@ -18,7 +18,6 @@
                     {% for text in featured_texts %}
                         <h1 class="featured-title"><a href="{{ text.get_absolute_url }}">{{ text.title }}</a></h1>
                         <p>{{ text.summary }}</p>
-                        <p>{{ text.text_translation|safe|truncatewords:100 }}</p>
                         <div class="featured-text-image" style="background-image: url('{{ text.image.url }}');"></div>
                     {% endfor %}
                 </div>
@@ -27,7 +26,13 @@
                 <h2>Topics</h2>
                 <div class="topics-wrapper">
                     {% for topic in topics %}
-                    <h4 class="topic-name"><a href="{{ topic.get_absolute_url }}">{{ topic.name }}</a></h4>
+                        <h4 class="topic-name"><a href="{{ topic.get_absolute_url }}">{{ topic.name }}</a></h4>
+                    {% endfor %}
+                </div>
+                <h2>Countries</h2>
+                <div class="countries-wrapper">
+                    {% for country in countries %}
+                        <h4 class="country-name"><a href="{{ country.get_absolute_url }}">{{ country.name }}</a></h4>
                     {% endfor %}
                 </div>
             </div>
