--- a/texts/templates/texts/owner_list.html
+++ b/texts/templates/texts/owner_list.html
@@ -15,7 +15,7 @@
                 <div class="row">
                     <div class="col">
                         {% for owner in object_list %}
-                        <p><a href="{{ owner.get_absolute_url }}">{{ owner.owner_name }}</a></p>
+                        <p><a href="{{ owner.get_absolute_url }}">{{ owner.name }}</a></p>
                         {% endfor %}
                     </div>
                     <div class="col">
