--- a/texts/templates/texts/author_detail.html
+++ b/texts/templates/texts/author_detail.html
@@ -2,12 +2,12 @@
 {% load static %}
 {% block content %}
     <section class="jumbotron author-jumbotron">
-        <div class="row text-center">
-            <div class="col-8">
-                <h1>{{ object.full_name }}</h1>
-                <h2>{{ object.original_full_name }}</h2>
+        <div class="row">
+            <div class="col-8 text-left">
+                <h1 class="serif">{{ object.full_name }}</h1>
+                <h2 class="serif1">{{ object.original_full_name }}</h2>
             <p>{{ object.bio|safe }}</p></div>
-            <div class="col-4" style="background-image: url('{{ object.image.url }}');">
+            <div class="col-4" style="background-image: url('{{ object.image.url }}'); background-size: cover;">
             </div>
         </div>
     </section>
