--- a/templates/header.html
+++ b/templates/header.html
@@ -1,16 +1,16 @@
 {% load static %}
 <header class="sova-header">
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-between">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-end">
             <div class="navbar-brand col-6">
                 <a class="site-name" href="/">
-                   SOVÁ
+                    SOVÁ
                 </a>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse col-6 text-right" id="navbarText">
+            <div class="sans-serif collapse navbar-collapse col-6 justify-content-end" id="navbarText">
                 <ul class="navbar-nav ltp-top-nav">
                     <li class="nav-item">
                         <a class="nav-link active" href="/texts">Texts</a>
@@ -22,20 +22,11 @@
                         <a class="nav-link active" href="/authors">Authors</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" href="/topics">Topics</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="#">About</a>
                     </li>
-                    {% if request.user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/accounts">Account</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Log Out</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Log In</a>
-                        </li>
-                    {% endif %}
                 </li>
             </ul>
         </div>
