--- a/texts/templates/texts/theme_list.html
+++ b/texts/templates/texts/theme_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     <section class="jumbotron">
         <div class="row text-center">
-            <h1 class="col-4">Publishers</h1>
+            <h1 class="col-4">Topics</h1>
             <div class="col-8">
                 <p>All of them</p>
             </div>
@@ -14,11 +14,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        {% for owner in object_list %}
-                        <p><a href="{{ owner.get_absolute_url }}">{{ owner.name }}</a> // <a href="{{ owner.get_absolute_url }}">{{ owner.original_name }}</a></p>
+                        <h1>Topics</h1>
+                        {% for topic in object_list %}
+                        <p><a href="{{ topic.get_absolute_url }}">{{ topic.name }}</a></p>
                         {% endfor %}
                     </div>
                     <div class="col">
+                        <h1>Countries</h1>
+                        {% for country in countries %}
+                        <p><a href="{{ country.get_absolute_url }}">{{ country.name }}</a></p>
+                        {% endfor %}
                         <p></p>
                     </div>
                 </div>
